--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -7,6 +7,8 @@
   <%= f.password_field :password %>
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
+  <%= f.label :specialties %>
+  <%= f.text_field :specialties %>
   <br/>
   <%= f.submit "Create", :class => "btn btn-primary" %>
 <% end %>
