commit with the feature 'as a user i want to see my data info' with the scenario 'User access to profile' passing

--- a/app/views/users/user_profile.erb
+++ b/app/views/users/user_profile.erb
@@ -3,4 +3,4 @@
 	<label for='Email'> <strong> Email: </strong><%= current_user.email  %> </label><br>
 	<label for='Specialties'> <strong>Specialties:</strong> <%= current_user.specialties  %> </label><br>
 
-	<a class="btn btn-secondary" href="<%= url(:users, :go_to_edit) %>" >Edit profile</a>
+	<a class="btn btn-primary" href="<%= url(:users, :go_to_edit) %>" >Edit profile</a>
