--- a/app/views/users/user_profile_edit.erb
+++ b/app/views/users/user_profile_edit.erb
@@ -11,6 +11,6 @@
   <%= f.label :specialties %>
   <%= f.text_field :specialties %>
   <br/>
-  <%= f.submit "Edit", :class => "btn btn-primary" %>
-  <a class="btn btn-primary" href="<%= url(:users, :profile) %>"> Return </a>
+  <%= f.submit "Accept", :class => "btn btn-primary" %>
+  <a class="btn btn-primary" href="<%= url(:users, :profile) %>"> Cancel </a>
 <% end %>
