--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -15,7 +15,7 @@
       	</div>
       	<div class="profile"> 
 						<% if signed_in? %>
-							<%= current_user.email %>
+							<a href="<%= url(:users, :profile) %>"> <%= current_user.email %> </a>
 						<% end %>
 				</div>
 				</div>
