--- a/app/views/job_offers/index.erb
+++ b/app/views/job_offers/index.erb
@@ -1,4 +1,7 @@
 <h1>Current Job Offers</h1>
+<div>
+			    <%= [:error, :warning, :success, :notice].map { |type| flash_tag(type, :class => "alert alert-#{type} fade in", :id =>'flashMessage', :bootstrap => true) }.join.html_safe %>
+			  </div>
 <table class="table table-bordered">
 	<tr>
 		<th>Title</th>
@@ -22,6 +25,7 @@
 			<%= link_to 'Apply', url_for(:job_offers, :apply, :offer_id => offer.id), :class => "btn btn-primary" %>
 		</td>		
 	</tr>
+
 
   <% end %>
 
