commit botton active/deactivate offers

--- a/app/views/job_offers/my_offers.erb
+++ b/app/views/job_offers/my_offers.erb
@@ -29,11 +29,21 @@
                 <button type='submit' title="Delete offer" rel='tooltip' class="btn btn-secondary" >Delete
                 </button>
        <% end %>
+
+		<% if offer.is_active %>
+       	<%- form_tag url(:job_offers, :deactivate, :offer_id => offer.id), :method => :put, :style => 'display:inline' do %>
+	    <button type='submit' title="Deactivate" rel='tooltip' class="btn btn-secondary" >Deactivate
+	    </button>
+	    <% end %>
+	    <% end %>
+
        <% if not offer.is_active %>
-				<%- form_tag url(:job_offers, :activate, :offer_id => offer.id), :method => :put, :style => 'display:inline' do %>
-	                <button type='submit' title="Activate offer" rel='tooltip' class="btn btn-secondary" >Activate
-	                </button>
-	       <% end %>
+     	  <%- form_tag url(:job_offers, :activate, :offer_id => offer.id), :method => :put, :style => 'display:inline' do %>
+          <button type='submit' title="Activate offer" rel='tooltip' class="btn btn-secondary" >Activate
+          </button>
+	    <% end %>
+
+
        <% end %>
 		</td>	
 	</tr>
